--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "license": "MIT",
   "description": "An easy loop for html5 canvas games.",
-  "main": "dist/main.js",
+  "main": "dist/gameloop.js",
   "bin": "dist/cli/cli.js",
   "engines": {
     "node": ">=8.9.3"
@@ -24,8 +24,7 @@
     "test-test": "eslint src && jest",
     "lint": "eslint src tools",
     "docs": "jsdoc -r --destination docs/ --readme README.md src/",
-    "buildold": "babel src --presets babel-preset-es2015 --out-dir dist",
-    "build": "webpack"
+    "build": "./bin/build.sh"
   },
   "repository": {
     "type": "git",
@@ -42,15 +41,12 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "chai": "^3.5.0",
-    "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.2.3",
     "mocha": "^2.5.3",
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "@shoutem/webpack-prepend-append": "github:lyonzy/webpack-prepend-append#patch-1",
     "commander": "^2.9.0",
     "compression": "^1.7.1",
     "express": "^4.16.2",
