Main gameloop file converted to ES6

--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "chai": "^3.5.0",
+    "eslint": "^4.13.1",
     "mocha": "^2.5.3",
     "webpack": "^3.10.0"
   },
