--- a/package.json
+++ b/package.json
@@ -44,8 +44,12 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "chai": "^3.5.0",
+    "css-loader": "^0.28.7",
     "eslint": "^4.13.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "mocha": "^2.5.3",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "webpack": "^3.10.0"
   },
   "dependencies": {
